# app/Models/Dashboard/PartnerProject.php
@@ -19,4 +19,28 @@ class PartnerProject extends Model
     protected $hidden = [
         'updated_at', 'created_at',
     ];
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     **/
+    public function partner()
+    {
+        return $this->belongsTo( \App\Models\Dashboard\Partner::class );
+    }
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     **/
+    public function project()
+    {
+        return $this->belongsTo( \App\Models\Dashboard\Project::class );
+    }
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\HasMany
+     **/
+    public function requests()
+    {
+        return $this->hasMany( \App\Models\Dashboard\ProjectAccessRequest::class );
+    }
 }
