# app/Models/Dashboard/ProjectAccessRequest.php
@@ -1,0 +1,48 @@
+<?php
+
+namespace App\Models\Dashboard;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class ProjectAccessRequest extends Model
+{
+    use SoftDeletes;
+
+    public $table = 'project_access_requests';
+
+    const CREATED_AT = 'created_at';
+    const UPDATED_AT = 'updated_at';
+
+    protected $dates = [ 'deleted_at' ];
+
+    public $fillable = [
+        'user_id',
+        'status',
+    ];
+
+    /**
+     * The attributes that should be hidden for arrays.
+     *
+     * @var array
+     */
+    protected $hidden = [
+        'updated_at', 'created_at', 'deleted_at', 'id', 'user_id'
+    ];
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     **/
+    public function partnerProject()
+    {
+        return $this->belongsTo( \App\Models\Dashboard\PartnerProject::class );
+    }
+
+    /**
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     **/
+    public function user()
+    {
+        return $this->belongsTo( \App\Models\Dashboard\User::class );
+    }
+}
